--- a/notebooks/user_overview_analysis.ipynb
+++ b/notebooks/user_overview_analysis.ipynb
@@ -1247,10 +1247,380 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Dur. (ms)',\n",
+       " 'Activity Duration DL (ms)',\n",
+       " 'Activity Duration UL (ms)',\n",
+       " 'Social Media DL (Bytes)',\n",
+       " 'Social Media UL (Bytes)',\n",
+       " 'Google DL (Bytes)',\n",
+       " 'Google UL (Bytes)',\n",
+       " 'Email DL (Bytes)',\n",
+       " 'Email UL (Bytes)',\n",
+       " 'Youtube DL (Bytes)',\n",
+       " 'Youtube UL (Bytes)',\n",
+       " 'Netflix DL (Bytes)',\n",
+       " 'Netflix UL (Bytes)',\n",
+       " 'Gaming DL (Bytes)',\n",
+       " 'Gaming UL (Bytes)',\n",
+       " 'Other DL (Bytes)',\n",
+       " 'Other UL (Bytes)',\n",
+       " 'Total UL (Bytes)',\n",
+       " 'Total DL (Bytes)',\n",
+       " 'total_google_DV',\n",
+       " 'total_email_DV',\n",
+       " 'total_gaming_DV',\n",
+       " 'total_youtube_DV',\n",
+       " 'total_netflix_DV',\n",
+       " 'total_social_DV',\n",
+       " 'total_other_DV']"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#relevant features\n",
+    "selected_features = ['Dur. (ms)', 'Activity Duration DL (ms)', 'Activity Duration UL (ms)', 'Social Media DL (Bytes)', 'Social Media UL (Bytes)', 'Google DL (Bytes)', 'Google UL (Bytes)', 'Email DL (Bytes)', 'Email UL (Bytes)', 'Youtube DL (Bytes)', 'Youtube UL (Bytes)', 'Netflix DL (Bytes)', 'Netflix UL (Bytes)', 'Gaming DL (Bytes)', 'Gaming UL (Bytes)', 'Other DL (Bytes)', 'Other UL (Bytes)', 'Total UL (Bytes)', 'Total DL (Bytes)', 'total_google_DV', 'total_email_DV', 'total_gaming_DV', 'total_youtube_DV', 'total_netflix_DV', 'total_social_DV', 'total_other_DV']\n",
+    "selected_features"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1.2 Analyze the basic metrics"
+    "1.2 Analyze the basic metrics\n",
+    "\n",
+    "Find the basic mertircs (mean, median, etc.) of the selected/relevant features in the Dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Dur. (ms)</th>\n",
+       "      <th>Activity Duration DL (ms)</th>\n",
+       "      <th>Activity Duration UL (ms)</th>\n",
+       "      <th>Social Media DL (Bytes)</th>\n",
+       "      <th>Social Media UL (Bytes)</th>\n",
+       "      <th>Google DL (Bytes)</th>\n",
+       "      <th>Google UL (Bytes)</th>\n",
+       "      <th>Email DL (Bytes)</th>\n",
+       "      <th>Email UL (Bytes)</th>\n",
+       "      <th>Youtube DL (Bytes)</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Other UL (Bytes)</th>\n",
+       "      <th>Total UL (Bytes)</th>\n",
+       "      <th>Total DL (Bytes)</th>\n",
+       "      <th>total_google_DV</th>\n",
+       "      <th>total_email_DV</th>\n",
+       "      <th>total_gaming_DV</th>\n",
+       "      <th>total_youtube_DV</th>\n",
+       "      <th>total_netflix_DV</th>\n",
+       "      <th>total_social_DV</th>\n",
+       "      <th>total_other_DV</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>1.499980e+05</td>\n",
+       "      <td>1.499980e+05</td>\n",
+       "      <td>1.499980e+05</td>\n",
+       "      <td>1.499980e+05</td>\n",
+       "      <td>149998.000000</td>\n",
+       "      <td>1.499980e+05</td>\n",
+       "      <td>1.499980e+05</td>\n",
+       "      <td>1.499980e+05</td>\n",
+       "      <td>149998.000000</td>\n",
+       "      <td>1.499980e+05</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.499980e+05</td>\n",
+       "      <td>1.499980e+05</td>\n",
+       "      <td>1.499980e+05</td>\n",
+       "      <td>1.499980e+05</td>\n",
+       "      <td>1.499980e+05</td>\n",
+       "      <td>1.499980e+05</td>\n",
+       "      <td>1.499980e+05</td>\n",
+       "      <td>1.499980e+05</td>\n",
+       "      <td>1.499980e+05</td>\n",
+       "      <td>1.499980e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>1.046086e+05</td>\n",
+       "      <td>1.829201e+06</td>\n",
+       "      <td>1.408898e+06</td>\n",
+       "      <td>1.795332e+06</td>\n",
+       "      <td>32928.633722</td>\n",
+       "      <td>5.750776e+06</td>\n",
+       "      <td>2.056527e+06</td>\n",
+       "      <td>1.791728e+06</td>\n",
+       "      <td>467371.972320</td>\n",
+       "      <td>1.163402e+07</td>\n",
+       "      <td>...</td>\n",
+       "      <td>8.264825e+06</td>\n",
+       "      <td>4.112132e+07</td>\n",
+       "      <td>4.546431e+08</td>\n",
+       "      <td>7.807303e+06</td>\n",
+       "      <td>2.259100e+06</td>\n",
+       "      <td>4.303327e+08</td>\n",
+       "      <td>2.264351e+07</td>\n",
+       "      <td>2.262870e+07</td>\n",
+       "      <td>1.828261e+06</td>\n",
+       "      <td>4.293647e+08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>8.103816e+04</td>\n",
+       "      <td>5.696430e+06</td>\n",
+       "      <td>4.643259e+06</td>\n",
+       "      <td>1.035488e+06</td>\n",
+       "      <td>19006.285412</td>\n",
+       "      <td>3.309124e+06</td>\n",
+       "      <td>1.189921e+06</td>\n",
+       "      <td>1.035849e+06</td>\n",
+       "      <td>269971.656643</td>\n",
+       "      <td>6.710572e+06</td>\n",
+       "      <td>...</td>\n",
+       "      <td>4.769012e+06</td>\n",
+       "      <td>1.127641e+07</td>\n",
+       "      <td>2.441441e+08</td>\n",
+       "      <td>3.516454e+06</td>\n",
+       "      <td>1.071119e+06</td>\n",
+       "      <td>2.440220e+08</td>\n",
+       "      <td>9.246881e+06</td>\n",
+       "      <td>9.260878e+06</td>\n",
+       "      <td>1.035652e+06</td>\n",
+       "      <td>2.432672e+08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>7.142000e+03</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>1.200000e+01</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>2.070000e+02</td>\n",
+       "      <td>3.000000e+00</td>\n",
+       "      <td>1.400000e+01</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>5.300000e+01</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.480000e+02</td>\n",
+       "      <td>2.866892e+06</td>\n",
+       "      <td>7.114041e+06</td>\n",
+       "      <td>4.033000e+04</td>\n",
+       "      <td>8.359000e+03</td>\n",
+       "      <td>3.063580e+05</td>\n",
+       "      <td>7.890300e+04</td>\n",
+       "      <td>9.843200e+04</td>\n",
+       "      <td>1.563000e+03</td>\n",
+       "      <td>1.490450e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>5.743750e+04</td>\n",
+       "      <td>1.487800e+04</td>\n",
+       "      <td>2.153925e+04</td>\n",
+       "      <td>8.991550e+05</td>\n",
+       "      <td>16448.250000</td>\n",
+       "      <td>2.882354e+06</td>\n",
+       "      <td>1.024266e+06</td>\n",
+       "      <td>8.927562e+05</td>\n",
+       "      <td>233373.250000</td>\n",
+       "      <td>5.833442e+06</td>\n",
+       "      <td>...</td>\n",
+       "      <td>4.145949e+06</td>\n",
+       "      <td>3.322204e+07</td>\n",
+       "      <td>2.431061e+08</td>\n",
+       "      <td>4.943578e+06</td>\n",
+       "      <td>1.359341e+06</td>\n",
+       "      <td>2.187262e+08</td>\n",
+       "      <td>1.599846e+07</td>\n",
+       "      <td>1.597949e+07</td>\n",
+       "      <td>9.322232e+05</td>\n",
+       "      <td>2.185539e+08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>8.639900e+04</td>\n",
+       "      <td>3.930600e+04</td>\n",
+       "      <td>4.679500e+04</td>\n",
+       "      <td>1.794372e+06</td>\n",
+       "      <td>32920.000000</td>\n",
+       "      <td>5.765904e+06</td>\n",
+       "      <td>2.054550e+06</td>\n",
+       "      <td>1.793534e+06</td>\n",
+       "      <td>466225.500000</td>\n",
+       "      <td>1.161601e+07</td>\n",
+       "      <td>...</td>\n",
+       "      <td>8.267086e+06</td>\n",
+       "      <td>4.114346e+07</td>\n",
+       "      <td>4.558411e+08</td>\n",
+       "      <td>7.812876e+06</td>\n",
+       "      <td>2.263574e+06</td>\n",
+       "      <td>4.316152e+08</td>\n",
+       "      <td>2.266181e+07</td>\n",
+       "      <td>2.263581e+07</td>\n",
+       "      <td>1.826486e+06</td>\n",
+       "      <td>4.299923e+08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>1.324308e+05</td>\n",
+       "      <td>6.796105e+05</td>\n",
+       "      <td>5.991078e+05</td>\n",
+       "      <td>2.694940e+06</td>\n",
+       "      <td>49334.000000</td>\n",
+       "      <td>8.623632e+06</td>\n",
+       "      <td>3.088453e+06</td>\n",
+       "      <td>2.689332e+06</td>\n",
+       "      <td>700444.500000</td>\n",
+       "      <td>1.744848e+07</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.238430e+07</td>\n",
+       "      <td>4.903424e+07</td>\n",
+       "      <td>6.657064e+08</td>\n",
+       "      <td>1.068296e+07</td>\n",
+       "      <td>3.159838e+06</td>\n",
+       "      <td>6.414166e+08</td>\n",
+       "      <td>2.929277e+07</td>\n",
+       "      <td>2.929092e+07</td>\n",
+       "      <td>2.727493e+06</td>\n",
+       "      <td>6.399274e+08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>1.859336e+06</td>\n",
+       "      <td>1.365365e+08</td>\n",
+       "      <td>1.449113e+08</td>\n",
+       "      <td>3.586064e+06</td>\n",
+       "      <td>65870.000000</td>\n",
+       "      <td>1.146283e+07</td>\n",
+       "      <td>4.121357e+06</td>\n",
+       "      <td>3.586146e+06</td>\n",
+       "      <td>936418.000000</td>\n",
+       "      <td>2.325910e+07</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.655882e+07</td>\n",
+       "      <td>7.833131e+07</td>\n",
+       "      <td>9.029696e+08</td>\n",
+       "      <td>1.552878e+07</td>\n",
+       "      <td>4.518036e+06</td>\n",
+       "      <td>8.592028e+08</td>\n",
+       "      <td>4.519008e+07</td>\n",
+       "      <td>4.519815e+07</td>\n",
+       "      <td>3.650861e+06</td>\n",
+       "      <td>8.595209e+08</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>8 rows × 26 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          Dur. (ms)  Activity Duration DL (ms)  Activity Duration UL (ms)  \\\n",
+       "count  1.499980e+05               1.499980e+05               1.499980e+05   \n",
+       "mean   1.046086e+05               1.829201e+06               1.408898e+06   \n",
+       "std    8.103816e+04               5.696430e+06               4.643259e+06   \n",
+       "min    7.142000e+03               0.000000e+00               0.000000e+00   \n",
+       "25%    5.743750e+04               1.487800e+04               2.153925e+04   \n",
+       "50%    8.639900e+04               3.930600e+04               4.679500e+04   \n",
+       "75%    1.324308e+05               6.796105e+05               5.991078e+05   \n",
+       "max    1.859336e+06               1.365365e+08               1.449113e+08   \n",
+       "\n",
+       "       Social Media DL (Bytes)  Social Media UL (Bytes)  Google DL (Bytes)  \\\n",
+       "count             1.499980e+05            149998.000000       1.499980e+05   \n",
+       "mean              1.795332e+06             32928.633722       5.750776e+06   \n",
+       "std               1.035488e+06             19006.285412       3.309124e+06   \n",
+       "min               1.200000e+01                 0.000000       2.070000e+02   \n",
+       "25%               8.991550e+05             16448.250000       2.882354e+06   \n",
+       "50%               1.794372e+06             32920.000000       5.765904e+06   \n",
+       "75%               2.694940e+06             49334.000000       8.623632e+06   \n",
+       "max               3.586064e+06             65870.000000       1.146283e+07   \n",
+       "\n",
+       "       Google UL (Bytes)  Email DL (Bytes)  Email UL (Bytes)  \\\n",
+       "count       1.499980e+05      1.499980e+05     149998.000000   \n",
+       "mean        2.056527e+06      1.791728e+06     467371.972320   \n",
+       "std         1.189921e+06      1.035849e+06     269971.656643   \n",
+       "min         3.000000e+00      1.400000e+01          2.000000   \n",
+       "25%         1.024266e+06      8.927562e+05     233373.250000   \n",
+       "50%         2.054550e+06      1.793534e+06     466225.500000   \n",
+       "75%         3.088453e+06      2.689332e+06     700444.500000   \n",
+       "max         4.121357e+06      3.586146e+06     936418.000000   \n",
+       "\n",
+       "       Youtube DL (Bytes)  ...  Other UL (Bytes)  Total UL (Bytes)  \\\n",
+       "count        1.499980e+05  ...      1.499980e+05      1.499980e+05   \n",
+       "mean         1.163402e+07  ...      8.264825e+06      4.112132e+07   \n",
+       "std          6.710572e+06  ...      4.769012e+06      1.127641e+07   \n",
+       "min          5.300000e+01  ...      1.480000e+02      2.866892e+06   \n",
+       "25%          5.833442e+06  ...      4.145949e+06      3.322204e+07   \n",
+       "50%          1.161601e+07  ...      8.267086e+06      4.114346e+07   \n",
+       "75%          1.744848e+07  ...      1.238430e+07      4.903424e+07   \n",
+       "max          2.325910e+07  ...      1.655882e+07      7.833131e+07   \n",
+       "\n",
+       "       Total DL (Bytes)  total_google_DV  total_email_DV  total_gaming_DV  \\\n",
+       "count      1.499980e+05     1.499980e+05    1.499980e+05     1.499980e+05   \n",
+       "mean       4.546431e+08     7.807303e+06    2.259100e+06     4.303327e+08   \n",
+       "std        2.441441e+08     3.516454e+06    1.071119e+06     2.440220e+08   \n",
+       "min        7.114041e+06     4.033000e+04    8.359000e+03     3.063580e+05   \n",
+       "25%        2.431061e+08     4.943578e+06    1.359341e+06     2.187262e+08   \n",
+       "50%        4.558411e+08     7.812876e+06    2.263574e+06     4.316152e+08   \n",
+       "75%        6.657064e+08     1.068296e+07    3.159838e+06     6.414166e+08   \n",
+       "max        9.029696e+08     1.552878e+07    4.518036e+06     8.592028e+08   \n",
+       "\n",
+       "       total_youtube_DV  total_netflix_DV  total_social_DV  total_other_DV  \n",
+       "count      1.499980e+05      1.499980e+05     1.499980e+05    1.499980e+05  \n",
+       "mean       2.264351e+07      2.262870e+07     1.828261e+06    4.293647e+08  \n",
+       "std        9.246881e+06      9.260878e+06     1.035652e+06    2.432672e+08  \n",
+       "min        7.890300e+04      9.843200e+04     1.563000e+03    1.490450e+05  \n",
+       "25%        1.599846e+07      1.597949e+07     9.322232e+05    2.185539e+08  \n",
+       "50%        2.266181e+07      2.263581e+07     1.826486e+06    4.299923e+08  \n",
+       "75%        2.929277e+07      2.929092e+07     2.727493e+06    6.399274e+08  \n",
+       "max        4.519008e+07      4.519815e+07     3.650861e+06    8.595209e+08  \n",
+       "\n",
+       "[8 rows x 26 columns]"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[selected_features].describe()\n",
+    "# print('_______---------___________Mode:_________---------------__\\n' ,df[selected_features].mode())"
    ]
   },
   {
@@ -1259,6 +1629,13 @@
    "source": [
     "1.3 Conduct a Non-Graphical Univariate Analysis"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
